- Fixed broken slide alignment

--- a/assets/css/sass/blocks/_badges.scss
+++ b/assets/css/sass/blocks/_badges.scss
@@ -1,7 +1,10 @@
 .badge-positioner {
     position: absolute;
     pointer-events: none;
-    top: 2rem;
+    left: 0;
+    bottom: 0;
+    z-index: 10;
+
     .module--carousel & {
         left: 0;
         bottom: 0;
@@ -15,6 +18,7 @@
         @include media($md)
         {
             left: 7.25rem;
+            top: 2rem;
         }
     }
 
@@ -25,6 +29,7 @@
         @include media($md)
         {
             right: 7.25rem;
+            top: 2rem;
         }
     }    
 
